--- a/ui/src/main/res/drawable/ui_secondary_action_button.xml
+++ b/ui/src/main/res/drawable/ui_secondary_action_button.xml
@@ -20,7 +20,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <stroke android:width="1dp" android:color="@color/ui_components_secondary_color" />
-            <solid android:color="@color/ui_transparent" />
+            <solid android:color="@color/white" />
             <corners android:radius="4dp" />
         </shape>
     </item>
