--- a/ui/src/main/res/drawable-v21/ui_secondary_action_button.xml
+++ b/ui/src/main/res/drawable-v21/ui_secondary_action_button.xml
@@ -15,7 +15,7 @@
                 <shape android:shape="rectangle">
                     <stroke android:width="1dp" android:color="@color/ui_components_secondary_color" />
                     <corners android:radius="4dp" />
-                    <solid android:color="@color/ui_transparent" />
+                    <solid android:color="@color/white" />
                 </shape>
             </item>
             <item>
