material button style

--- a/exampleApp/src/main/res/layout/activity_widgets2.xml
+++ b/exampleApp/src/main/res/layout/activity_widgets2.xml
@@ -26,6 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:onClick="openMaterialButtonsActivity"
+            android:text="Material Buttons" />
+
+        <Button
+            style="@style/Button.Action.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:onClick="openMLButtonsActivity"
             android:text="MLButtons" />
 
